[package]
name = "iomm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.17", features = ["full"] }
log = { version = "0.4", features = ["max_level_debug", "release_max_level_warn"] }
env_logger = "0.9"
dotenv = "0.15"
quinn = "0.8"
async-trait = "0.1"
futures-core = "0.3"
rcgen = "0.9"
rustls = "0.20"
futures-util = "0.3"